--- a/src/main/webapp/static/app/html/partial/home.html
+++ b/src/main/webapp/static/app/html/partial/home.html
@@ -1,7 +1,7 @@
 <!-- Example row of columns -->
 <div class="row" >
-	<div class="col-md-6">
-		<h2>Activity</h2>
+	<div class="col-md-6" ng-controller="ActivityController" ng-init="getAll(page=0)">
+		<h2>Activity <span class="badge">{{totalElements}}</span></h2>
 		<p>
 			Go and explore all Activity we have for you.
 		</p>
@@ -9,13 +9,13 @@
 			<a class="btn btn-default" href="/#/activities" role="button">View details &raquo;</a>
 		</p>
 	</div>
-	<div class="col-md-6">
-		<h2>User</h2>
+	<div class="col-md-6" ng-controller="UserController" ng-init="getAll(page=0)">
+		<h2>User <span class="badge">{{totalElements}}</span></h2>
 		<p>
 			Go and explore, all Users we have in out database.
 		</p>
 		<p>
-			<a class="btn btn-default" href="#" role="button">View details &raquo;</a>
+			<a class="btn btn-default" href="/#/users" role="button">View details &raquo;</a>
 		</p>
 	</div>
 </div>
